# rainfall_app

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  requirements_full.txt
.github/hooks/: pre-commit-config.yaml
.github/workflows/: pre-commit-config.yaml  python-app.yml
mlruns/0/: meta.yaml
models/: current_champion.pkl  current_champion.pkl.pkl  current_champion_2025-06-17.pkl  current_champion_2025-06-18.pkl  current_champion_2025-06-27.pkl  location_encoder.pkl  model.pkl  preprocessor.pkl  retrained_model.pkl
monitoring/: monitor.py
project_env/: pyvenv.cfg
project_env/Scripts/: activate  activate.bat
rainfall_env/: pyvenv.cfg
rainfall_env/Scripts/: activate  activate.bat  numba  vba_extract.py
reports/: 2025-08-27_drift_report.html  2025-08-28_drift_report.html  2025-08-29_drift_report.html  2025-09-01_drift_report.html  2025-09-04_drift_report.html  2025-09-05_drift_report.html  drift_report.html  model_report.html  today_drift_report.html
src/: app.py  config.yml  core.py  data.dvc  inference_pipeline.py  main.py  mlflow_starter.sh  monitor.py  output_data.dvc  retraining.py  test_inference.py  utils.py
src/data/: make_dataset.py  rainfall_data.csv
src/data/ref/: ref_data.csv
src/features/: build_features.py
src/logs_records/: logger.py
src/models/: current_champion_2025-08-29.pkl  current_champion_2025-09-01.pkl  current_champion_2025-09-04.pkl  model.pkl  predict_model.py  random.py  train_model.py
src/steps/: clean_data.py  data_pipeline.py  inference_pipeline.py  ingest_data.py  model.pkl  monitor_retrain.py  predict_model.py  report.html  train_model.py  utils.py
src/visualization/: drift_report.html
tests/: locustfile.py  test_inference.py  test_model.py  test_pipeline.py
web_app/: Dockerfile  app.py  config.yml  inference_pipeline.py  monitor.py  requirements.txt  requirements_test.txt  test.py  utils.py
web_app/assets/: rain.css
web_app/models/: current_champion.pkl  model-settings.json  preprocessor.pkl  retrained_model_2025-06-16.pkl
web_app/pages/: dashboard.py  drift.py  home.py  test.py
(+117 files in other folders)
